0.8.0 - currently working on
- [#5168] Fix: Use a NullCacheBackend for the RootlineCach
- [#5167] Fix: Code indented with spaces
- [#5166] Fix: Port TestingFramework changes from the PHPUnit extension
- [#5135] Feature: Enhance the error message about missing setData
- [#5132] Feature: Add FrontEndUser.addUserGroup
- [#5114] Bugfix: Crash in AbstractMailer in PHP 5.3
- [#4155] Cleanup: Deprecate templatehelper::getFeUserUid
- [#5052] Cleanup: Deprecate TemplateHelper::createRestrictedImage
- [#5111] Feature: Check for empty or invalid e-mail addresses when sending e-mails
- [#5107] Bugfix: Drop the use of forceReturnPath
- [#5106] Change: Add more specific exceptions to Tx_Oelib_AbstractMailer::send
- [#5104] Bugfix: E-Mail attachments with file name with content from memory are read from disk
- [#5103] Bugfix: TestingFramework::cleanUp needs to discard stored e-mails
- [#5100] Feature: Add convenience function for accessing sent SwiftMails
- [#4283] Feature: Delegate to SwiftMailer
- [#5099] Cleanup: Move the require calls to inside methods
- [#5093] Bugfix: Dependency error message about Emogrifier when installing in 6.2
- [#4867] Cleanup: Use the new copyright headers
- [#5092] Feature: Add functions for moving a Geo element
- [#4910] Change: Update Emogrifier to the latest version
- [#5033] Cleanup: Move Interface/ to Classes/Interface/
- [#5034] Cleanup: Move Mapper/ to Classes/Mapper/
- [#5035] Cleanup: Move Model/ to Classes/Model/
- [#5036] Cleanup: Move ViewHelper/ to Classes/ViewHelper/
- [#5037] Cleanup: Move Visibility/ to Classes/Visibility/
- [#5081] Fix: Test crash in Tx_Oelib_TestingFrameworkTest in TYPO3 CMS 6.2 if activateContentAdapter is set
- [#5082] Fix: Missing TSFE renderCharset leads to PHP warnings, thanks to Nicole Cordes
- [#5079] Change: Add dependencies for the test extensions
- [#5078] Fix: Don't use NULL as third parameter in mb_substr
- [#4649] Fix: Also recognize first/last name for current TYPO3 versions