@@ -35,14 +35,10 @@ class Tx_Oelib_RealMailerTest extends Tx_Phpunit_TestCase {
 		$this->subject = new Tx_Oelib_RealMailer();
 
 		$this->message = $this->getMock('t3lib_mail_Message', array('send', '__destruct'));
-		t3lib_div::addInstance('t3lib_mail_Message', $this->message);
+		$finalMailMessageClassName = t3lib_utility_VersionNumber::convertVersionNumberToInteger(TYPO3_version) >= 6000000
+			? 'TYPO3\\CMS\\Core\\Mail\\MailMessage' : 't3lib_mail_Message';
+		t3lib_div::addInstance($finalMailMessageClassName, $this->message);
 	}
-
-	protected function tearDown() {
-		t3lib_div::purgeInstances();
-		unset($this->subject, $this->message);
-	}
-
 
 	/**
 	 * @test
